# neunet

./: CMakeLists.txt  main.cpp
src/core/: ActivationFunction.h  CMakeLists.txt  Connection.h  ErrorFunction.h  Exception.hpp  Neunet.h  Neuron.h  TrainingEpoch.hpp
src/core/functions/: ArctanFunction.hpp  BiasFunction.hpp  BinaryFunction.hpp  HyperbolicTangentFunction.hpp  LinearFunction.hpp  MseFunction.hpp  ReLuFunction.hpp  RootMseFunction.hpp  SigmoidFunction.hpp
src/core/mentors/backprop/: BackpropMentor.h
src/core/mentors/backprop/src/: BackpropMentor.cpp
src/core/src/: ActivationFunction.cpp  Neunet.cpp  Neuron.cpp
